--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A basic page</title>
+<title>Activity 3 - CS 260</title>
 </head>
 <body>
 
-<h1>Introduction</h1>
-<p>How to write HTML: see this document.</p>
-
+<h1>Activity 3</h1>
+<h2>About:</h2>
+<p>I am a senior studying mathematics at BYU</p>
+<hr>
+<h2>Projects:</h2>
+<p>Three projects that I have worked on are:</p>
 <ul>
-  <li>one</li>
+  <li>a project that used neural networks to classify art by time period</li>
+  <li>a project that created a server for a family map phone app</li>
+  <li>a program that plays hangman with the user</li>
 </ul>
+<hr>
+<h2>Experience:</h2>
+<p>Some of my work experience:</p>
+<ul>
+  <li>working as a research assistant for the math department</li>
+  <li>working as a secretary for the law school</li>
+  <li>working as an au pair in Italy</li>
+</ul>
+<hr>
+<h2>Contact:</h2>
+<ul>
+  <li><a href="https://www.linkedin.com/in/rachel-newell-3276ba14a/">linkedin account</a></li>
+  <li><a href="https://github.com/newellrd">github account</a></li>
+  <li>email: racheldarlenenewell@yahoo.com</li>
+</ul>
+<hr>
+
+
 
 
 </body>
