--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>Three projects that I have worked on are:</p>
 <ul>
   <li>a project that used neural networks to classify art by time period</li>
-  <li>a project that created a server for a family map phone app</li>
+  <li>a server for a family map phone app</li>
   <li>a program that plays hangman with the user</li>
 </ul>
 <hr>
