--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
 <!DOCTYPE html>
 <html>
+<nav>
+<ul class="menulist">
+  <li><a href="http://104.131.126.195/CS260/index.html">Index</a></li>
+  <li><a href="http://104.131.126.195/CS260/projects.html">Projects</a></li>
+  <li><a href="http://104.131.126.195/CS260/experience.html">Experience</a></li>
+  <li><a href="http://104.131.126.195/CS260/contact.html">Contact</a></li>
+</ul>
+</nav>
+
 <head>
-<title>Activity 3 - CS 260</title>
+<title>Activity 4 - Index</title>
+<link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
 
-<h1>Activity 3</h1>
+<h1>Index</h1>
+<hr>
 <h2>About:</h2>
 <p>I am a senior studying mathematics at BYU</p>
-<hr>
-<h2>Projects:</h2>
-<p>Three projects that I have worked on are:</p>
-<ul>
-  <li>a project that used neural networks to classify art by time period</li>
-  <li>a server for a family map phone app</li>
-  <li>a program that plays hangman with the user</li>
-</ul>
-<hr>
-<h2>Experience:</h2>
-<p>Some of my work experience:</p>
-<ul>
-  <li>working as a research assistant for the math department</li>
-  <li>working as a secretary for the law school</li>
-  <li>working as an au pair in Italy</li>
-</ul>
-<hr>
-<h2>Contact:</h2>
-<ul>
-  <li><a href="https://www.linkedin.com/in/rachel-newell-3276ba14a/">linkedin account</a></li>
-  <li><a href="https://github.com/newellrd">github account</a></li>
-  <li>email: racheldarlenenewell@yahoo.com</li>
-</ul>
-<hr>
-
-
-
 
 </body>
 </html>
