--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,40 @@
 <html>
+
+<nav>
+<ul class="menulist">
+  <li><a href="http://104.131.126.195/CS260/index.html">Index</a></li>
+  <li><a href="http://104.131.126.195/CS260/projects.html">Projects</a></li>
+  <li><a href="http://104.131.126.195/CS260/experience.html">Experience</a></li>
+  <li><a href="http://104.131.126.195/CS260/contact.html">Contact</a></li>
+</ul>
+</nav>
+
 <head>
 <title>Activity 4 - contact</title>
 <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
 
+
+
 <h1>Contact Information</h1>
 <hr>
-<ul>
-  <li><a href="https://www.linkedin.com/in/rachel-newell-3276ba14a/">linkedin account</a></li>
-  <li><a href="https://github.com/newellrd">github account</a></li>
-  <li>email: racheldarlenenewell@yahoo.com</li>
-</ul>
+
+<section>
+   <aside>
+      <h2>Personal Contact Information:</h2>
+      <ul>
+        <li>email: racheldarlenenewell@yahoo.com</li>
+      </ul>
+   </aside>
+   <article>
+     <h2>Professional Contact Information:</h2>
+     <ul>
+       <li><a href="https://www.linkedin.com/in/rachel-newell-3276ba14a/">linkedin account</a></li>
+       <li><a href="https://github.com/newellrd">github account</a></li>
+     </ul>
+   </article>
+</section>
 
 </body>
 </html>
