--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <nav>
 <ul class="menulist">
-  <li><a href="http://104.131.126.195/CS260/index.html">Index</a></li>
-  <li><a href="http://104.131.126.195/CS260/projects.html">Projects</a></li>
-  <li><a href="http://104.131.126.195/CS260/experience.html">Experience</a></li>
-  <li><a href="http://104.131.126.195/CS260/contact.html">Contact</a></li>
+  <li class="menulink"><a href="http://104.131.126.195/CS260/index.html">Index</a></li>
+  <li class="menulink"><a href="http://104.131.126.195/CS260/projects.html">Projects</a></li>
+  <li class="menulink"><a href="http://104.131.126.195/CS260/experience.html">Experience</a></li>
+  <li class="menulink"><a href="http://104.131.126.195/CS260/contact.html">Contact</a></li>
 </ul>
 </nav>
 
@@ -18,7 +18,9 @@
 <h1>Index</h1>
 <hr>
 <h2>About:</h2>
-<p>I am a senior studying mathematics at BYU</p>
+<p>My name is Rachel Newell, and I am a senior studying mathematics at BYU.</p>
+
+<img src="overlookingjeru.jpg" alt="Jerusalem Overlook" width="800" height="600">
 
 </body>
 </html>
