--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,14 @@
 <html>
+
+<nav>
+<ul class="menulist">
+  <li><a href="http://104.131.126.195/CS260/index.html">Index</a></li>
+  <li><a href="http://104.131.126.195/CS260/projects.html">Projects</a></li>
+  <li><a href="http://104.131.126.195/CS260/experience.html">Experience</a></li>
+  <li><a href="http://104.131.126.195/CS260/contact.html">Contact</a></li>
+</ul>
+</nav>
+
 <head>
 <title>Activity 4 - Projects</title>
 <link rel="stylesheet" href="portfolio.css">
